tests/correct/comments.py


# test
  #test
      #test   as

print "hello world" #test this shit   

