tests/error/strings2.py
print "hello world"
print " hello world this is unterminated
